Fix post description overflow on smaller devices

--- a/app/javascript/stylesheets/components/Board.scss
+++ b/app/javascript/stylesheets/components/Board.scss
@@ -85,6 +85,10 @@
     height: 140px;
     color: $astuto-black;
 
+    @include media-breakpoint-down(sm) {
+      height: auto;
+    }
+
     &:hover { cursor: pointer; }
 
     .postContainer {
